added investor mailing list support

--- a/views/partials/instantaccess.ejs
+++ b/views/partials/instantaccess.ejs
@@ -83,7 +83,7 @@
   }
 </script>
 <div style="display: inline-block; position: relative">
-  <button type="button" onclick="iaButtonClicked()" id="ia-btn" style="background-color: #4A4A4A; border-width: 0; padding: 0; width: 56px; height: 56px; border-radius:10px;">
+  <button type="button" class="btn btn-standard" onclick="iaButtonClicked()" id="ia-btn" style="background-color: #4A4A4A; border: 1px solid #e5e5e5; padding: 0; width: 35px; height: 35px; border-radius:10px;">
     <img src="https://dashboard.instantaccess.io/upload/image/whitelogo.svg"/>
   </button>
   <iframe id="ia-framework-login" src="" width="170" height="215" frameBorder="0" style="display:none; border-radius:10px; z-index: 1000; position: absolute; left: 0px; bottom: 0px;"></iframe>
